{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 11,
  "lineage": "ba29dda4-9307-8b15-7776-a83b6175a690",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "CentOS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065efef2c739d613b",
            "arn": "arn:aws:ec2:us-east-1:360002965715:instance/i-02c940f7451fbf404",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02c940f7451fbf404",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "n_virginia",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06881c3771f545b4e",
            "private_dns": "ip-172-16-0-12.ec2.internal",
            "private_ip": "172.16.0.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ec57ffcb1d0e8b6a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a679e80f70521fc5",
            "tags": {
              "Name": "CentOS",
              "Owner": "Vadim",
              "Project": "Study"
            },
            "tags_all": {
              "Name": "CentOS",
              "Owner": "Vadim",
              "Project": "Study"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0363bd710875ddfb4"
            ]
          },
          "dependencies": [
            "aws_instance.Ubuntu",
            "aws_security_group.centos_sg",
            "aws_security_group.ubuntu_sg",
            "aws_subnet.exadel-public-subnet",
            "aws_vpc.exadel-vpc",
            "data.aws_ami.CentOS_latest",
            "data.aws_ami.Ubuntu_22_latest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:360002965715:instance/i-07abd0101cc05ace8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07abd0101cc05ace8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "n_virginia",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09e7963549aeff2e9",
            "private_dns": "ip-172-16-0-4.ec2.internal",
            "private_ip": "172.16.0.4",
            "public_ip": "18.206.14.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07d50eac87221cc13",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a679e80f70521fc5",
            "tags": {
              "Name": "Ubuntu",
              "Owner": "Vadim",
              "Project": "Study"
            },
            "tags_all": {
              "Name": "Ubuntu",
              "Owner": "Vadim",
              "Project": "Study"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08bcd32f002e0bffa"
            ]
          },
          "dependencies": [
            "aws_security_group.ubuntu_sg",
            "aws_subnet.exadel-public-subnet",
            "aws_vpc.exadel-vpc",
            "data.aws_ami.Ubuntu_22_latest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "exadel-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360002965715:internet-gateway/igw-0a67ea75eb7c0a8e2",
            "id": "igw-0a67ea75eb7c0a8e2",
            "owner_id": "360002965715",
            "tags": {
              "Name": "EXADEL-VPC-IGW"
            },
            "tags_all": {
              "Name": "EXADEL-VPC-IGW"
            },
            "vpc_id": "vpc-0a401d62aedf91fb4"
          },
          "dependencies": [
            "aws_vpc.exadel-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360002965715:route-table/rtb-0bb22d9c6532b46b0",
            "id": "rtb-0bb22d9c6532b46b0",
            "owner_id": "360002965715",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a67ea75eb7c0a8e2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Exadel"
            },
            "tags_all": {
              "Name": "Exadel"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a401d62aedf91fb4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.exadel-igw",
            "aws_vpc.exadel-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b656b0140ac2ba54",
            "route_table_id": "rtb-0bb22d9c6532b46b0",
            "subnet_id": "subnet-0a679e80f70521fc5"
          },
          "dependencies": [
            "aws_internet_gateway.exadel-igw",
            "aws_route_table.public",
            "aws_subnet.exadel-public-subnet",
            "aws_vpc.exadel-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "centos_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360002965715:security-group/sg-0363bd710875ddfb4",
            "description": "allow_web_ssh_icmp_allout",
            "egress": [
              {
                "cidr_blocks": [
                  "172.16.0.4/32"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "172.16.0.4/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.16.0.4/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "172.16.0.4/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0363bd710875ddfb4",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.4/32"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "172.16.0.4/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.16.0.4/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "172.16.0.4/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_ssh_icmp_centos",
            "name_prefix": "",
            "owner_id": "360002965715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_ssh_icmp_CentOS"
            },
            "tags_all": {
              "Name": "web_ssh_icmp_CentOS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a401d62aedf91fb4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.Ubuntu",
            "aws_security_group.ubuntu_sg",
            "aws_subnet.exadel-public-subnet",
            "aws_vpc.exadel-vpc",
            "data.aws_ami.Ubuntu_22_latest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ubuntu_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360002965715:security-group/sg-08bcd32f002e0bffa",
            "description": "allow_web_ssh_icmp_allout",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08bcd32f002e0bffa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_ssh_icmp_ubuntu",
            "name_prefix": "",
            "owner_id": "360002965715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_ssh_icmp_ubuntu"
            },
            "tags_all": {
              "Name": "web_ssh_icmp_ubuntu"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a401d62aedf91fb4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.exadel-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "exadel-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360002965715:subnet/subnet-052d9cf8fa5d72597",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.16.0.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052d9cf8fa5d72597",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "360002965715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Exadel-Private-Subnet"
            },
            "tags_all": {
              "Name": "Exadel-Private-Subnet"
            },
            "vpc_id": "vpc-0a401d62aedf91fb4"
          },
          "dependencies": [
            "aws_vpc.exadel-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "exadel-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360002965715:subnet/subnet-0a679e80f70521fc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.16.0.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a679e80f70521fc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "360002965715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Exadel-Public-Subnet"
            },
            "tags_all": {
              "Name": "Exadel-Public-Subnet"
            },
            "vpc_id": "vpc-0a401d62aedf91fb4"
          },
          "dependencies": [
            "aws_vpc.exadel-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "exadel-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360002965715:vpc/vpc-0a401d62aedf91fb4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/24",
            "default_network_acl_id": "acl-0d0d2701c12a01cb0",
            "default_route_table_id": "rtb-0e7a2462da15898d7",
            "default_security_group_id": "sg-06d42d11fe9005463",
            "dhcp_options_id": "dopt-0b0a57b3b0f2244f9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a401d62aedf91fb4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e7a2462da15898d7",
            "owner_id": "360002965715",
            "tags": {
              "Name": "Exadel-VPC"
            },
            "tags_all": {
              "Name": "Exadel-VPC"
            }
          }
        }
      ]
    }
  ]
}